# openpi

./: .gitignore  pyproject.toml
scripts/: evaluate.py  playground.ipynb  playground.py  run_inference.py
scripts/dataset_conversion/: tsh_to_lerobot.py  xdof_to_lerobot.py
src/openpi/: transforms.py
src/openpi/policies/: bimanual_yam_policy.py  tsh_policy.py  ur5_policy.py
src/openpi/training/: config.py  data_loader.py
